Fixing Sonar (part 1): Fixing the simple issues (#548)
changes to please the **Sonar God**

code style refactoring #366