@@ -1,8 +1,6 @@
 package fi.aalto.cs.apluscourses.ui.exercise;
 
 import static org.hamcrest.Matchers.containsString;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.mock;
 
 import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.testFramework.LightIdeaTestCase;
@@ -13,10 +11,8 @@ import fi.aalto.cs.apluscourses.model.SubmissionInfo;
 import fi.aalto.cs.apluscourses.model.SubmittableFile;
 import fi.aalto.cs.apluscourses.presentation.exercise.SubmissionViewModel;
 import fi.aalto.cs.apluscourses.ui.base.CheckBox;
-
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -90,11 +86,11 @@ public class SubmissionDialogTest extends LightIdeaTestCase {
     return new TestDialog(
         createViewModel(
             "Cool Name",
-            Arrays.asList(
-                new Group(123, Arrays.asList("Jarkko", "Petteri")),
-                new Group(456, Arrays.asList("Annika", "Katariina"))
+            List.of(
+                new Group(123, List.of("Jarkko", "Petteri")),
+                new Group(456, List.of("Annika", "Katariina"))
             ),
-            new Group(456, Arrays.asList("Annika", "Katariina")),
+            new Group(456, List.of("Annika", "Katariina")),
             submittableFilePaths.entrySet().stream()
                 .map(x -> new SubmittableFile(x.getKey(), x.getValue().getFileName().toString()))
                 .collect(Collectors.toList()),
